bee-common/bee-common-derive/tests/packable/fail/invalid_ty_enum.stderr
error: Tags for enums can only be unisigned, sized integers.
  --> $DIR/invalid_ty_enum.rs:11:21
   |
11 | #[packable(tag_ty = [u8; 32])]
   |                     ^^^^^^^^
